Encryption Functionality added

--- a/interactive/about.html
+++ b/interactive/about.html
@@ -33,7 +33,7 @@
             <h2>Prof. Anil Kadu</h2>
             <p class="title">Guide</p>
             <p></p>
-            <p>example@example.com</p>
+            <p>anil.kadu@vit.edu</p>
             <p><button class="button">Contact</button></p>
           </div>
         </div>
@@ -54,9 +54,9 @@
       <div class="card">
         <div class="container">
           <h2>Krushna Aundhekar</h2>
-          <p class="title">Roll N0: A09 &amp; 11810636</p>
+          <p class="title">Roll N0: A11 &amp; 11810636</p>
           <p></p>
-          <p>example@example.com</p>
+          <p>krushna.aundhekar18@vit.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -66,9 +66,9 @@
       <div class="card">
         <div class="container">
           <h2>Chaturved Degloorkar</h2>
-          <p class="title">Roll N0: A09 &amp; 11810636</p>
+          <p class="title">Roll N0: A21 &amp; 11810636</p>
           <p></p>
-          <p>example@example.com</p>
+          <p>chaturved.degloorkar18@vit.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -77,9 +77,9 @@
         <div class="card">
           <div class="container">
             <h2>Krishnakant Bhalerao</h2>
-            <p class="title">Roll N0: A09 &amp; 11810636</p>
+            <p class="title">Roll N0: A17 &amp; 11810636</p>
             <p></p>
-            <p>example@example.com</p>
+            <p>krishnakant.bhalerao18@vit.edu</p>
             <p><button class="button">Contact</button></p>
           </div>
         </div>
@@ -88,9 +88,9 @@
         <div class="card">
           <div class="container">
             <h2>Akshay Bulkunde</h2>
-            <p class="title">Roll N0: A09 &amp; 11810636</p>
+            <p class="title">Roll N0: A20 &amp; 11810636</p>
             <p></p>
-            <p>example@example.com</p>
+            <p>akshay.bulkunde18@vit.edu</p>
             <p><button class="button">Contact</button></p>
           </div>
         </div>
