--- a/interactive/modk-add.html
+++ b/interactive/modk-add.html
@@ -27,6 +27,7 @@
           <li class="field">&#120125;<sub>p</sub></li>
           <li><a href="modk-add.html" class="active">Addition</a></li>
           <li><a href="modk-mul.html">Multiplication</a></li>
+          <li><a href="encryption.html">Encryption</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
@@ -47,11 +48,6 @@
           </div>
           <div id="point-p-coordinates" class="parameters">
             <p><em>P</em>:</p>
-            <div class="parameter point-coordinate"><label for="point-p-x">x</label><input id="point-p-x" name="px" value="17" type="number" step="1"></div>
-            <div class="parameter point-coordinate"><label for="point-p-y">y</label><input id="point-p-y" name="py" value="10" type="number" step="1"></div>
-          </div>
-          <div id="point-p-coordinates" class="parameters">
-            <p><em>-P</em>:</p>
             <div class="parameter point-coordinate"><label for="point-p-x">x</label><input id="point-p-x" name="px" value="17" type="number" step="1"></div>
             <div class="parameter point-coordinate"><label for="point-p-y">y</label><input id="point-p-y" name="py" value="10" type="number" step="1"></div>
           </div>
