Github link corrected from Html files

--- a/interactive/about.html
+++ b/interactive/about.html
@@ -21,6 +21,7 @@
                 <li class="field">&#120125;<sub>p</sub></li>
                 <li><a href="modk-add.html">Addition</a></li>
                 <li><a href="modk-mul.html">Multiplication</a></li>
+                <li><a href="encryption.html">Encryption</a></li>
                 <li><a href="about.html"  class="active">About</a></li>
               </ul>
             </nav>
