--- a/interactive/modk-add.html
+++ b/interactive/modk-add.html
@@ -72,7 +72,7 @@
     </main>
     <footer>
       <p>This tool was created for Course Project of Cybersecurity of Batch 2022(TY,Div - A,Batch- B1, Group - B1)</p>
-      <p>It's free software, released under the <a href="http://opensource.org/licenses/MIT">MIT license</a>, hosted on <a href="https://github.com/RohitAsegaonkar">GitHub</a>.</p>
+      <p>It's free software, released under the <a href="http://opensource.org/licenses/MIT">MIT license</a>, hosted on <a href="https://github.com/RohitAsegaonkar/ECC">GitHub</a>.</p>
     </footer>
     <script type="text/javascript">
         $(function() {
