Added Decryption Feature

--- a/interactive/about.html
+++ b/interactive/about.html
@@ -22,6 +22,7 @@
                 <li><a href="modk-add.html">Addition</a></li>
                 <li><a href="modk-mul.html">Multiplication</a></li>
                 <li><a href="encryption.html">Encryption</a></li>
+                <li><a href="decryption.html" >Decryption</a></li>
                 <li><a href="about.html"  class="active">About</a></li>
               </ul>
             </nav>
