--- a/interactive/decryption.html
+++ b/interactive/decryption.html
@@ -18,17 +18,18 @@
         <img src="vit.png" alt="Vishwakarma Institute of Technology, Pune" width="80" height="80" z-index: -1>
         <strong> Vishwakarma Institute of Technology, Pune.</strong>
       </p>
-      <h1>Elliptic Curve point addition (&#120125;<sub>p</sub>)</h1>
+      <h1>Decryption </h1>
       <nav>
         <ul>
           <li class="field">&#8477;</li>
           <li><a href="reals-add.html">Addition</a></li>
           <li><a href="reals-mul.html">Multiplication</a></li>
           <li class="field">&#120125;<sub>p</sub></li>
-          <li><a href="modk-add.html" class="active">Addition</a></li>
+          <li><a href="modk-add.html">Addition</a></li>
           <li><a href="modk-mul.html">Multiplication</a></li>
+          <li class="field">&#968;</li>
           <li><a href="encryption.html">Encryption</a></li>
-          <li><a href="decryption.html" >Decryption</a></li>
+          <li><a href="decryption.html" class="active">Decryption</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
@@ -40,27 +41,37 @@
           <div id="curve-coefficients" class="parameters">
             <p>Curve:</p>
             <div class="parameter curve-coefficient"><label for="coefficient-a">a</label><input id="coefficient-a" name="a" value="2" type="number" step="1"></div>
-            <div class="parameter curve-coefficient"><label for="coefficient-b">b</label><input id="coefficient-b" name="b" value="3" type="number" step="1"></div>
+            <div class="parameter curve-coefficient"><label for="coefficient-b">b</label><input id="coefficient-b" name="b" value="1" type="number" step="1"></div>
           </div>
           <div id="field-coefficients" class="parameters">
             <p>Field:</p>
             <div class="parameter curve-coefficient"><label for="coefficient-p">p</label><input id="coefficient-p" name="p" value="97" type="number" step="1"></div>
             <div class="placeholder"></div>
           </div>
-          <div id="point-p-coordinates" class="parameters">
-            <p><em>P</em>:</p>
-            <div class="parameter point-coordinate"><label for="point-p-x">x</label><input id="point-p-x" name="px" value="17" type="number" step="1"></div>
-            <div class="parameter point-coordinate"><label for="point-p-y">y</label><input id="point-p-y" name="py" value="10" type="number" step="1"></div>
+          <div id="scalars" class="parameters">
+            <p><em>nb</em>:</p>
+            <div class="parameter multiplication-factor"><label for="scalar-n">n</label><input id="scalar-n" name="n" value="3" type="number" step="1"></div>
+            <div class="placeholder"></div>
           </div>
-          <div id="point-q-coordinates" class="parameters">
-            <p><em>Q</em>:</p>
-            <div class="parameter point-coordinate"><label for="point-q-x">x</label><input id="point-q-x" name="qx" value="95" type="number" step="1"></div>
-            <div class="parameter point-coordinate"><label for="point-q-y">y</label><input id="point-q-y" name="qy" value="31" type="number" step="1"></div>
+          <div id="point-g-coordinates" class="parameters">
+            <p><em>Point G</em>:</p>
+            <div class="parameter point-coordinate"><label for="point-g-x">x</label><input id="point-g-x" name="gx" value="0" type="number" step="1"></div>
+            <div class="parameter point-coordinate"><label for="point-g-y">y</label><input id="point-g-y" name="gy" value="1" type="number" step="1"></div>
           </div>
-          <div id="point-r-coordinates" class="parameters">
-            <p><em>R</em> = <em>P</em> + <em>Q</em></span>:</p>
-            <div class="parameter point-coordinate result"><label for="point-r-x">x</label><input id="point-r-x" name="rx" step="any" readonly></div>
-            <div class="parameter point-coordinate result"><label for="point-r-y">y</label><input id="point-r-y" name="ry" step="any" readonly></div>
+          <div id="scalars" class="parameters">
+            <p><em>k</em>:</p>
+            <div class="parameter multiplication-factor"><label for="scalar-kr">k</label><input id="scalar-kr" name="kr" value="10" type="number" step="1"></div>
+            <div class="placeholder"></div>
+          </div>
+          <div id="point-cm-coordinates" class="parameters">
+            <p><em>Cm</em> = <em>{kG, Pm + kPb}</em>:</p>
+            <div class="parameter point-coordinate "><label for="point-cm-x">x</label><input id="point-cm-x" name="cmx" value = "62,30" type="list" step="1"></div>
+            <div class="parameter point-coordinate "><label for="point-cm-y">y</label><input id="point-cm-y" name="cmy" value = "42,68" type="list" step="1"></div>
+          </div>
+          <div id="point-pm-coordinates" class="parameters">
+            <p><em>Pm</em>:</p>
+            <div class="parameter point-coordinate result"><label for="point-pm-x">x</label><input id="point-pm-x" name="pmx" step = "any" readonly ></div>
+            <div class="parameter point-coordinate result"><label for="point-pm-y">y</label><input id="point-pm-y" name="pmy" step = "any" readonly ></div>
           </div>
         </div>
         <div id="summary">
@@ -77,7 +88,7 @@
     </footer>
     <script type="text/javascript">
         $(function() {
-            $.ec.curve = new $.ec.modk.PointAddition();
+            $.ec.curve = new $.ec.modk.Encryption();
         });
     </script>
   </body>
